# rs_chat

./: docker-compose.yml  readme.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20250128120940_create_user_table.sql  20250128121206_create_refresh_token_table.sql  20250202135648_create_rooms.sql
backend/src/: auth.rs  auth_middleware.rs  lib.rs  main.rs
backend/src/main/: lib.rs  main.rs
backend/src/main/middleware/: auth_middleware.rs
backend/src/main/routes/: user.rs
backend/src/main/services/: mod.rs
backend/src/middleware/: auth_middleware.rs  mod.rs
backend/src/routes/: auth.rs  user.rs
backend/src/services/: auth_common.rs  login.rs  logout.rs  me.rs  mod.rs  register.rs  structs.rs  update_user.rs
backend/src/services/auth/: auth_common.rs  mod.rs  structs.rs
backend/src/services/chat/: create_room.rs  get_room.rs  mod.rs
backend/tests/: auth_test.rs
frontend/: bun.lockb  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/components/organisms/: ChatCreateModal.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/layout/: AuthLayout.tsx  AuthProvider.tsx  BasicLayout.tsx
frontend/src/pages/: Chat.tsx  ChatList.tsx  Home.tsx  Login.tsx  NotFoundPage.tsx  Register.tsx  Settings.tsx
frontend/src/routes/: AppRoute.tsx  AuthRouts.tsx  ErrorRoutes.tsx  MainRoutes.tsx
