[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
jsonwebtoken = "9"
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.85"
reqwest = { version = "0.12.12", features = ["json"] }

[lib]
name = "backend"
path = "src/lib.rs"

